--- a/style.css
+++ b/style.css
@@ -7,3 +7,11 @@
 	border-radius: 5px;
 	background-color: #BADA55;
 }
+
+#box{
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 1px;
+	width: 90vw;
+	height: 90vh;
+}
