--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
-#block{
-	position: absolute;
-	width: 50px;
-	height: 50px;
-	top : 10px;
-	left : 10px;
-	border-radius: 5px;
-	background-color: #BADA55;
+body{
+	margin: 0px;
 }
 
 #box{
+	position: relative;
 	border-radius: 5px;
 	border-style: solid;
 	border-width: 1px;
-	width: 90vw;
-	height: 90vh;
+	width: 98vw;
+	height: 98vh;
+	top: 1vh;
+	left: 1vw;
+}
+
+#block{
+	position: absolute;
+	width: 5vh;
+	height: 5vh;
+	border-radius: 5px;
+	background-color: #BADA55;
 }
